<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.dashboard.DashboardFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/border_image"
            android:src="@drawable/ic_baseline_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camara"
            app:layout_constraintEnd_toStartOf="@+id/btnGallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="76dp"
            android:text="@string/galeria"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCamera">

            <TextView
                android:id="@+id/textView_nombreApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nombreApellidos"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <EditText
                android:id="@+id/editTextNombreApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:textAlignment="center"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView_fechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fechaNacimiento"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <EditText
                android:id="@+id/editTextFechaNacimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:textAlignment="center"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView_fechaCaducidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_fechaCaducidad"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <EditText
                android:id="@+id/editTextFechaCaducidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:textAlignment="center"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/textView_dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dni"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <EditText
                android:id="@+id/editTextDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:textAlignment="center"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/textView_sexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_sexo"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <EditText
                android:id="@+id/editTextSexo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:textAlignment="center"
                android:textSize="14dp" />
            <TextView
                android:id="@+id/textView_nacionalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_nacionalidad"
                android:textSize="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

            <EditText
                android:id="@+id/editTextNacionalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:textAlignment="center"
                android:textSize="14dp" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonTerminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_continuar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>